Changes in 1.6.1

 - Scrollbuttons in IGUITabControl adapt now to tab-height.

 - Fix modal dialog position (found by LoneBoco: http://sourceforge.net/tracker/?func=detail&aid=2900266&group_id=74339&atid=540676)

 - Make stringarrays for enums in IGUISkin a little safer

 - Fixing left+right special keys (ctrl, shift, alt) on Win32 (thanks to pc0de for good patch-ideas).

 - Add support for keys KEY_PRINT, KEY_HOME (on numpad) and KEY_NUMLOCK on Linux.

 - Fix another (OldValue == NewValue) before drop()/grap(), this time in CTextureAttribute::setTexture.

 - Bugfix: CGUIToolBar::addButton does no longer mess up when no image is set and does now actually work with the text.

 - Fix ninja animation range which got messed up a little when b3d animations got fixed (thx gbox for finding)

Changes in 1.6 (23.09.2009)

 - Added IFileSystem::createEmptyFileList, exposed IFileList::sort, addItem and added getID

 - Fix MAKE_IRR_ID so it can be used from outside the irr namespace (Micha's patch)

 - Renamed some methods in ISkinnedMesh to match the official Irrlicht naming scheme according to createXXX()

 - Change debug data to draw using lines instead of arrows, which is much faster. Patch by pc0de

 - Fix a bug with FPS camera animator causing stutters. Patch by FuzzYspo0N

 - Fix scrolling controls in CGUITabControl

 - Fix a bug when getting optimal texture size in D3D drivers, by Jetro Lauha (tonic)

 - Added EGDS_TITLEBARTEXT_DISTANCE_X and EGDS_TITLEBARTEXT_DISTANCE_Y to GUI, submitted by FuzzYspo0N

 - Fix for UFT8 filenames displayed in file dialog, patch by MadHyde.

 - Added const method for array::binary_search, potentially slow as it doesn't sort the list!

 - Add support for scaling button images.
